tests/negative/array_errors/array_type_mismatch.nano
# Expected Error: Array element type mismatch

fn main() -> int {
    let arr: array<int> = [1, 2, "three"]  # Error: string in int array
    return 0
}

shadow main {
    assert (== (main) 0)
}
